Update Closure Compiler to 20230802
from 20210104.